change deps, make tests work